--- a/components/Footer/index.module.scss
+++ b/components/Footer/index.module.scss
@@ -1,5 +1,5 @@
 .footer {
-    width: 100%;
+    // width: 100%;
     height: 90px;
     background: black;
     color: white;
