--- a/components/Main/index.module.scss
+++ b/components/Main/index.module.scss
@@ -1,7 +1,8 @@
 .main {
-  width: 100%;
   border-bottom: 1px solid;
   padding: 20px 0 0 0;
   display: grid;
   grid-row: repeat(5, 1fr);
+  overflow-x: hidden;
+
 }
